# mt5bridge_cpp

./: .gitignore  CMakeLists.txt  NOTICE  README.md  TODO.md
examples/: smoke_no_mt5.cpp  usage_example.cpp
include/mt5bridge/: mt5bridge.hpp
python/: mt5bridge_py.py
scripts/: build_msvc.bat  prepare_py_runtime.py
src/: mt5_bridge.cpp
